<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beer Trade Wars</string>

    <string name="main_btn_start_new">Start new game</string>
    <string name="main_btn_load">Load game</string>
    <string name="main_btn_continue">Continue last game</string>

    <string name="gamesetup_map">Map</string>
    <string name="gamesetup_city">Headquarters city</string>
    <string name="gamesetup_playername">Player name</string>
	<string name="gamesetup_opponentsCount">Opponents count</string>
	<string name="gamesetup_start">Start</string>

	<string name="map_basic">Two islands</string>

    <string name="city_trinkburg">Trinkburg</string>
    <string name="city_feldkirchen">Feldkirchen</string>
    <string name="city_weissau">Weissau</string>
    <string name="city_luisfeld">Luisfeld</string>
    <string name="city_maishafen">Maishafen</string>
    <string name="city_sanmartin">San Martin</string>
    <string name="city_steinfurt">Steinfurt</string>
    <string name="city_freiburg">Freiburg</string>
    <string name="city_prems">Prems</string>
    <string name="city_regenwald">Regenwald</string>
    <string name="city_hochstadt">Hochstadt</string>

    <string name="bpw">bottles per week</string>

    <string name="cityinfo_population">Population:</string>
    <string name="cityinfo_consumption">Estimated consumption:</string>
    <string name="cityinfo_others">Objects of other players:</string>
    <string name="cityinfo_other_has">%1$s has %2$s.</string>
	<string name="cityinfo_other_none">Other players have nothing in this city.</string>
    <string name="cityinfo_consumption_unknown">Unknown</string>
    <string name="cityinfo_connections">Transportation costs (per 1000 bottles):</string>
    <string name="cityinfo_prices">Prices (per bottle):</string>
    <string name="cityinfo_storage">Storage</string>
    <string name="cityinfo_storage_avail">Usage:</string>
    <string name="cityinfo_storage_expand">Expand</string>
    <string name="cityinfo_factory">Factory</string>
    <string name="cityinfo_factory_avail">Usage:</string>
    <string name="cityinfo_factory_unused">Idle units: %1$s</string>
    <string name="cityinfo_units_construct">%1$s units under construction</string>
    <string name="cityinfo_units_destruct">%1$s units avaiting removal</string>
    <string name="cityinfo_factory_expand">Expand</string>
    <string name="cityinfo_header_sort">Sort</string>
    <string name="cityinfo_header_consumed">Consumed</string>
    <string name="cityinfo_header_stored">Stored</string>
    <string name="cityinfo_header_transport_in">Sort</string>
    <string name="cityinfo_header_transport_out">Sort</string>
    <string name="cityinfo_header_production">Production</string>
    <string name="cityinfo_header_price">Price</string>

    <string name="overlay_close">Close</string>

    <string name="stats_header">Statistics</string>
	<string name="stats_header_player">Player</string>
	<string name="stats_header_ownedSorts">Sorts owned</string>
	<string name="stats_header_production">Production</string>
	<string name="stats_header_sold">Sold</string>
	<string name="stats_header_marketShare">Share</string>
	<string name="stats_header_value">Market price</string>

    <string name="expand_title_storage">Expand Storage in %1$s</string>
    <string name="expand_title_factory">Expand Factory in %1$s</string>
    <string name="expand_main_current">%1$s\nSize: %2$s\nDaily support cost: %3$s</string>
    <string name="expand_main_new">Expand to: %1$s</string>
    <string name="expand_main_new_expl">Size: %1$s\nDaily support cost: %2$s\nBuilding time: %3$s weeks\nPrice: %4$s</string>
    <string name="expand_build">Build (%1$s)</string>
	<string name="expand_factory_build_units">Build</string>
	<string name="expand_factory_build_units_e">Price %1$s per unit, %2$s weeks</string>
    <string name="expand_close">Close</string>
	<string name="expand_build_started">Construction started</string>
	<string name="expand_build_cant_start">Cannot start construction</string>

    <string name="nextturn_title">Moving to next week</string>
    <string name="nextturn_autosave">Autosave&#8230;</string>
    <string name="nextturn_close">Close</string>

    <string name="beersort_standard">Standard</string>

	<string name="game_nt_consumptionCalculations">Calculating consumption&#8230;</string>
	<string name="game_nt_transportCalculations">Calculating transport&#8230;</string>
	<string name="game_nt_productionCalculations">Calculating production&#8230;</string>
	<string name="game_nt_supportCalculations">Calculating costs of ownership&#8230;</string>
	<string name="game_nt_constructionCalculations">Calculating construction&#8230;</string>
	<string name="game_nt_complete">Turn COMPLETE!</string>
	<string name="game_nt_bankrupt">%1$s has no money. Production and logistics are TERMINATED!</string>
	<string name="game_nt_producedCity">City %1$s produced:</string>
	<string name="game_nt_producedSort">\t%1$s liters of %2$s produced.</string>	
	<string name="game_nt_producedLost">\tStorage full: %1$s liters of %2$s LOST!</string>	
	<string name="game_nt_consumedCity">City %1$s sold:</string>
	<string name="game_nt_consumedSort">\t%1$s bottles of %2$s (%3$s).</string>
	<string name="game_nt_constructedStorage">\t%1$s constructed in %2$s!</string>
	<string name="game_nt_constructedFactory">\t%1$s constructed in %2$s!</string>
	<string name="game_nt_constructedUnits">\t%1$s units installed in %2$s!</string>
	<string name="game_nt_processingPlayerTurn">Calculating turn of %1$s.</string>
	<string name="game_nt_cantSend">CAN NOT send %1$s packs of %2$s from %3$s to %4$s - not enough on storage.</string>
	<string name="game_nt_sent">Sent %1$s packs of %2$s from %3$s to %4$s.</string>
	<string name="game_nt_receivedDropped">%1$s bottles of %2$s delivered to %3$s and LOST - insufficient storage space.</string>

    <string name="storage_none">None</string>
    <string name="storage_small">Shed</string>
    <string name="storage_medium">Storage</string>
    <string name="storage_big">Storing area</string>
    <string name="factory_none">None</string>
    <string name="factory_small">Pub</string>
    <string name="factory_medium">Brewery</string>
    <string name="factory_big">Factory</string>
</resources>
